# oja

./: README.md  db.sqlite3  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy_ci.yml
oja/: asgi.py  settings.py  urls.py  wsgi.py
workout/: admin.py  forms.py  models.py  views.py  workout_service.py
workout/migrations/: 0001_initial.py  0002_alter_bodypartexercise_body_part_and_more.py  0003_alter_workoutsession_unique_together_and_more.py  0004_alter_exercise_description_alter_exercise_reps_and_more.py  0005_alter_exercise_weights.py  0006_alter_bodypart_description_and_more.py  0007_alter_user_managers.py  0008_alter_workoutsession_unique_together_and_more.py  0009_alter_workoutsession_unique_together_and_more.py  0009_alter_workoutsession_user.py  0010_alter_workoutsession_user.py
workout/serializers/: __init__.py  bodyparts.py  bodypartsexercise.py  exercise.py  workout_session.py
workout/templates/: body_part_exercise_list.html  create_body_part.html  create_body_part_exercise.html  create_session.html  edit_session.html  header.html  landing.html
workout/tests/: test_forms.py  test_view.py
