[project]
name = "oja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "pydantic>=2.11.9",
    "pymysql>=1.1.2",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "whitenoise>=6.11.0",
]
